@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.3.5")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.0")
   }
 }
 
@@ -12,15 +12,16 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-  id 'org.springframework.boot' version '2.3.4.RELEASE'
-  id 'org.owasp.dependencycheck' version '6.0.2'
-  id 'com.github.ben-manes.versions' version '0.36.0'
-  id 'org.sonarqube' version '3.0'
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'org.springframework.boot' version '2.6.7'
+  id 'org.owasp.dependencycheck' version '6.5.3'
+  id 'com.github.ben-manes.versions' version '0.38.0'
+  id 'org.sonarqube' version '3.2.0'
   id 'info.solidsoft.pitest' version '1.5.2'
-  id 'uk.gov.hmcts.java' version '0.12.5'
-  id 'io.freefair.lombok' version '5.3.0'
-  id 'au.com.dius.pact' version '4.1.14'
+  id 'io.freefair.lombok' version '5.3.3.3'
+  // If Pact version is changed, make sure serenity report works.
+  id 'au.com.dius.pact' version '4.1.8'
+  id 'org.flywaydb.flyway' version '6.5.7'
 }
 
 apply plugin: 'net.serenity-bdd.aggregator'
@@ -88,6 +89,9 @@ sourceSets {
   }
 
 }
+tasks.withType(Copy) {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
@@ -106,10 +110,12 @@ test {
 }
 
 task functional(type: Test) {
+  maxParallelForks = (System.getenv('MAX_FT_TESTS_PARALLEL_FORKS') ? System.getenv('MAX_FT_TESTS_PARALLEL_FORKS') : 1) as int
   description = "Runs functional tests"
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+
 }
 
 task integration(type: Test) {
@@ -157,8 +163,8 @@ jacocoTestCoverageVerification {
 jacocoTestReport {
   executionData(test, integration)
   reports {
-    xml.enabled = true
-    csv.enabled = false
+    xml.required = true
+    csv.required = false
     xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
@@ -167,6 +173,7 @@ pitest {
   junit5PluginVersion = '0.12'
   targetClasses = ['uk.gov.hmcts.reform.wataskmanagementapi.*']
   excludedClasses = [
+    'uk.gov.hmcts.reform.wataskmanagementapi.taskconfiguration.config.*',
     'uk.gov.hmcts.reform.wataskmanagementapi.config.*',
     'uk.gov.hmcts.reform.wataskmanagementapi.Application'
   ]
@@ -199,9 +206,10 @@ sonarqube {
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/config/**," +
-                                 "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/Application.java" +
-                                 "src/testUtils/java/uk/gov/hmcts/reform/wataskmanagementapi/**," +
-                                 "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/clients/**"
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/Application.java," +
+      "src/testUtils/java/uk/gov/hmcts/reform/wataskmanagementapi/**," +
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/clients/**," +
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/domain/entities/search/parameter/**"
   }
 }
 
@@ -221,6 +229,9 @@ dependencyUpdates {
 dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
 
+  //CVE Scanning only relevant to production code that is published, not test or other implementations
+  scanConfigurations += 'releaseCompileClasspath'
+
   analyzers {
     // Disable scanning of .NET related binaries
     assemblyEnabled = false
@@ -237,8 +248,32 @@ dependencyManagement {
     //
     dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    // CVE-2021-22112 - Privilege Escalation
-    dependency group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.6'
+
+    //CVE-2021-27568
+    dependency group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+
+    //CVE-2021-28170
+    dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
+
+    //CVE-2020-23171
+    dependency group: 'com.nimbusds', name: 'lang-tag', version: '1.5'
+
+    //CVE-2021-42550
+    dependencySet(group: 'ch.qos.logback', version: '1.2.10') {
+      entry 'logback-classic'
+      entry 'logback-core'
+    }
+    dependency group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.5'
+    dependencySet(group: 'org.seleniumhq.selenium', version: '4.1.2') {
+      entry 'selenium-java'
+      entry 'selenium-remote-driver'
+      entry 'selenium-firefox-driver'
+      entry 'selenium-chrome-driver'
+      entry 'selenium-safari-driver'
+      entry 'selenium-edge-driver'
+      entry 'selenium-api'
+      entry 'selenium-support'
+    }
   }
 }
 
@@ -249,17 +284,16 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.0',
-  junitPlatform   : '1.7.0',
-  reformLogging   : '5.1.5',
-  springBoot      : '2.4.2',
-  springfoxSwagger: '3.0.0',
-  serenity        : '2.2.12',
-  gradlePitest    : '1.5.1',
-  pitest          : '1.5.2',
-  sonarPitest     : '0.5',
-  pactVersion     : '4.1.7'
-
+  junit        : '5.7.2',
+  junitPlatform: '1.7.2',
+  reformLogging: '5.1.9',
+  springDoc    : '1.6.6',
+  serenity     : '3.1.20',
+  gradlePitest : '1.5.1',
+  pitest       : '1.5.2',
+  sonarPitest  : '0.5',
+  pactVersion  : '4.3.4',
+  logbook      : '2.6.2'
 ]
 
 ext.libraries = [
@@ -273,38 +307,58 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
 
-  implementation group: 'io.springfox', name: 'springfox-boot-starter', version: versions.springfoxSwagger
-  compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
 
-  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
 
-  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
-  implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
-  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
-  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.3'
+  implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
+  implementation 'org.zalando:problem-spring-web-starter:0.26.2'
 
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.43'
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
 
-  compile group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
 
-  compile group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.7.5'
+  implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.0.Final'
 
-  compile group: 'com.auth0', name: 'java-jwt', version: '3.11.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
 
-  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.12.0'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.58'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.58'
+
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.7.5'
+
+  implementation group: 'com.auth0', name: 'java-jwt', version: '3.11.0'
+
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.12.0'
+
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.0'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+  // required to convert postgres to hibernate types
+  implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.14.0'
+
+  //cache
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.0.4'
+
+  testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.15.3'
+  testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: '1.15.3'
+  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.197'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -312,38 +366,35 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
-  testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
-  testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+  testImplementation(group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.32.0') {
+    exclude group: 'com.github.jknack.handlebars.java'
+  }
 
-  testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-  testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
 
-  testCompile group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
-  testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
-  testCompile group: 'com.jparams', name: 'to-string-verifier', version: '1.4.8'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.6.0'
+  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
 
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+
+  testImplementation group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'
+  testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
   //Pact contract testing
-  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
-  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit', version: versions.pactVersion
 
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pactVersion
 
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5', version: '4.1.14'
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'spring', version: '4.1.14'
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5spring', version: '4.1.14'
-
-  testImplementation "au.com.dius.pact.provider:junit5:4.1.7"
-  testImplementation "au.com.dius.pact.provider:junit5spring:4.1.7"
-
-  contractTestCompile("org.junit.jupiter:junit-jupiter-api:5.6.2")
-  contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.6.2")
-  contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
-
-  testUtilsImplementation sourceSets.main.runtimeClasspath
-  testUtilsImplementation sourceSets.test.runtimeClasspath
+  contractTestRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.2')
+  contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.7.2')
 
   testUtilsImplementation sourceSets.main.runtimeClasspath
   testUtilsImplementation sourceSets.test.runtimeClasspath
@@ -357,15 +408,14 @@ dependencies {
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
 
-  contractTestCompile sourceSets.main.runtimeClasspath
-  contractTestCompile sourceSets.test.runtimeClasspath
+  contractTestImplementation sourceSets.main.runtimeClasspath
+  contractTestImplementation sourceSets.test.runtimeClasspath
 }
 
 task runAndPublishConsumerPactTests(type: Test) {
   logger.lifecycle("Runs pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
-
 }
 
 runAndPublishConsumerPactTests.finalizedBy pactPublish
@@ -397,11 +447,17 @@ task runProviderPactVerification(type: Test) {
   systemProperty 'pact.provider.version', project.pacticipantVersion
 }
 
+//task fortifyScan(type: JavaExec)  {
+//  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+//  classpath += sourceSets.test.runtimeClasspath
+//  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+//}
+
 runProviderPactVerification.dependsOn contract
 
 runProviderPactVerification.finalizedBy pactVerify
 
-def getCheckedOutGitCommitHash() {
+static def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
 
